Finishes up styling and fixes image errors - Updates home page so Ryan's name never wraps - Adds a paragraph about the new design to the home page - Tweaks styles a little generally - Tweaks comic page styles - Adds the jpegs for the minus! extra area - Updates the Markdown as needed

--- a/src/components/comic-page.module.scss
+++ b/src/components/comic-page.module.scss
@@ -57,7 +57,12 @@
 }
 
 .all-links {
-  text-align: center;
+  h3 {
+    align-items: center;
+    display: flex;
+    height: 3em;
+    justify-content: center;
+  }
 
   ul {
     display: table;
