--- a/src/components/home-page.module.scss
+++ b/src/components/home-page.module.scss
@@ -10,6 +10,8 @@
     align-items: center;
     display: flex;
     gap: 0.25rem;
+    font-size: 1.5rem;
+    margin: 0.5rem 0;
   }
 
   svg {
